# pomodoro

./: .gitignore  Makefile  alembic.ini  dependency.py  docker-compose.test.yml  docker-compose.yml  exception.py  fixtures.py  main.py  pyproject.toml  settings.py
alembic/: env.py
alembic/versions/: 47abda580cea_.py  4cc03093366d_add_table.py  5e5f3c687674_.py  64e985f6ff98_.py  6e7e185d767a_.py  8cfdefa75766_.py  b576f6fd91fa_.py  bf4b35c76d5d_.py  d8b28d7a629b_.py
app/: consumer.py  dependecy.py  settings.py
app/tasks/: handlers.py
app/users/auth/: handlers.py  service.py
app/users/auth/client/: mail.py
app/users/user_profile/: repository.py
cache/: accessor.py
client/: __init__.py  yandex.py
database/: database.py  models.py
handlers/: __init__.py  auth.py  ping.py  tasks.py  user.py
models/: tasks.py  user.py
repository/: __init__.py  cache_tasks.py  task.py  user.py
schema/: __init__.py  auth.py  tasks.py  user.py
service/: auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: infrastructure.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/users/: user_model.py  user_repository.py
tests/integration/auth/: test_auth_service.py
tests/unit/auth/: test_auth_service.py
