[tool.poetry]
name = "Pomodoro"
version = "0.1.0"
description = ""
authors = [
    "v_dmitrov <v.dmitrov@smartmerch.it>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.4"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
psycopg2-binary = "^2.9.9"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
redis = "^5.0.1"
httpx = "^0.27.0"
asyncpg = "^0.29.0"
greenlet = "^3.0.3"
gunicorn = "^21.2.0"
pytest = "^8.4.1"
pytest-asyncio = "^1.0.0"
pytest-twisted = "^1.14.3"
twisted = "^25.5.0"
fastapi = "^0.115.13" 
pytest-factoryboy = "^2.7.0"
pytest-trio = "^0.8.0"
celery = "^5.5.3"
aio-pika = "^9.5.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
